src/snapshots/parsing/expr_simple_bitwise_xor.snap
---
source: src/parser.rs
description: parsing expression
expression: actual.unwrap()
info: 10 ^ 20
---
location:
  line: 1
  column: 1
kind:
  binary:
    - bitwise_xor
    - location:
        line: 1
        column: 1
      kind:
        int_constant:
          - "10"
          - decimal
    - location:
        line: 1
        column: 6
      kind:
        int_constant:
          - "20"
          - decimal
